      value. Closes: #663202, #764000
    - Print the actual configuration file (instead of always sysfs.conf) on
      syntax errors.
    - Make init script provide itself.
  * Add missing lsb-base Depends to sysfsutils.
  * Cleanup old stop rcN.d symlinks from runlevels 0, 1 and 6. Closes: #555952
  * Stop passing obsolete arguments to update-rc.d.

 -- Guillem Jover <guillem@debian.org>  Sat, 16 Nov 2019 17:57:19 +0100

sysfsutils (2.1.0+repack-5) unstable; urgency=medium

  * QA upload.
  * Import packaging to https://salsa.debian.org.
  * Convert from cdbs to dh.
  * Bump debhelper compat to 11.
  * Change source priority from extra to optional.
  * Change sysfsutils priority from important to optional.
  * Remove Pre-Depends field from libsysfs2.
  * Switch from XC-Package-Type to Package-Type field.
  * Use correct path for GPL-2 and LGPL-2.1 license files.

 -- Jeremy Bicha <jbicha@debian.org>  Wed, 28 Nov 2018 21:11:47 -0500

sysfsutils (2.1.0+repack-4) unstable; urgency=medium

  * QA upload.
  * Call dh-autoreconf before building the package. (closes: #752828).

 -- Aurelien Jarno <aurel32@debian.org>  Sat, 23 Aug 2014 19:14:39 +0200

sysfsutils (2.1.0+repack-3) unstable; urgency=low

  * QA upload.
  * Add init script support for manipulating sysfs using fragments in
    /etc/sysfs.d. (closes: #575459)

 -- Chris Boot <bootc@bootc.net>  Thu, 02 May 2013 17:36:19 +0100

sysfsutils (2.1.0+repack-2) unstable; urgency=low

  * Orphan package.

 -- Martin Pitt <mpitt@debian.org>  Sun, 07 Oct 2012 15:51:14 +0200

sysfsutils (2.1.0+repack-1.2) unstable; urgency=low

  * Non-maintainer upload.
  * Support multi-arch: (closes: #663040)
    - Mark libsysfs2 as same.
    - Mark sysfsutils as foreign.
    - Adjust debhelper and cdbs build-dependencies.
    - Fixup -dev installation.

 -- Bastian Blank <waldi@debian.org>  Sat, 16 Jun 2012 17:18:46 +0000

sysfsutils (2.1.0+repack-1.1) unstable; urgency=low

  * Non-maintainer upload.
  * debian/sysfsutils.init: