@@ -44,6 +44,9 @@ sysfsutils (2.1.0+repack-6) UNRELEASED; urgency=medium
   * Add missing lsb-base Depends to sysfsutils.
   * Cleanup old stop rcN.d symlinks from runlevels 0, 1 and 6. Closes: #555952
   * Stop passing obsolete arguments to update-rc.d.
+  * Perform a proper and correct /usr-merge transition by moving the package
+    contents from / to /usr. This makes it possible to remove the special
+    handling from debian/rules, and use stock debhelper install fragments.
 
  -- Guillem Jover <guillem@debian.org>  Sat, 16 Nov 2019 17:57:19 +0100
 
